# slim-4q

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  DAS4Q.cpp  DAS4Q.h  config.json  constants.h  das.py  effect.h  hid.cpp  hid.h  keyboard.cpp  keyboard.h  keys.h  main.cxx  makefile  plugins.cpp  plugins.h  resource.h  rest_api.cpp  rest_api.h  rs.rc  trayicon.cpp  trayicon.h
customizer/: README.md  package-lock.json  package.json
customizer/public/: config.json
customizer/src/: App.vue  Key.vue  main.ts
customizer/src/components/: Chrome.vue
customizer/src/components/common/: EditableInput.vue  Hue.vue  Saturation.vue
customizer/src/mixin/: color.js
customizer/test/: index.html
plugins/: party.py  weather.py
